# Enterprise-JobRadar-Platform

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py  schema.py  schemas.py
app/api/: admin.py  jobs.py
app/crawlers/: __init__.py  base.py  remoteok.py  weworkremotely.py
app/services/: crawl_runs.py  dedup.py  ingest.py  normalize.py  search.py
app/static/: app.css  app.js  index.html
app/workers/: celery_app.py  tasks.py
docs/: crawl-run-design.md  crawl-run-e2e-acceptance.md  failure-task-management-acceptance.md  failure-task-management-design.md  project-status.md
tests/: conftest.py  test_api.py  test_crawl_runs.py  test_crawlers.py  test_crawlers_edge.py  test_dedup.py  test_dedup_extra.py  test_ingest.py  test_ingest_and_search.py  test_normalize.py  test_normalize_extra.py  test_schema.py  test_schemas_and_config.py  test_search.py  test_workers.py
