[project]
name = "jobhunt"
version = "0.1.0"
description = "Distributed job aggregation search engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "feedparser>=6.0",
    "celery>=5.4",
    "redis>=5.0",
    "python-dateutil>=2.9",
    "simhash>=2.1",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "ruff>=0.6",
    "taskipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.taskipy.tasks]
api = "uvicorn app.main:app --reload"
worker = "celery -A app.workers.celery_app worker --loglevel=info --concurrency=4"
beat = "celery -A app.workers.celery_app beat --loglevel=info"
test = "pytest -q"
lint = "ruff check app tests"
fmt = "ruff format app tests"
up = "docker compose up --build"
down = "docker compose down"
crawl = "curl -s -X POST http://localhost:8000/admin/crawl -H 'content-type: application/json' -d '{}'"
